specs/archive/m12-build-plan-v1/evidence/phase-5-RED.json.stderr
⎯⎯⎯⎯⎯⎯ Failed Tests 25 ⎯⎯⎯⎯⎯⎯⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md existence and frontmatter > workflows/cross-artifact-analyze/SKILL.md exists
AssertionError: Missing: /Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md

- Expected
+ Received

- true
+ false

 ❯ tests/m12-cross-artifact-analyze.test.mjs:29:12
     27| describe("cross-artifact-analyze SKILL.md existence and frontmatter", …
     28|   test("workflows/cross-artifact-analyze/SKILL.md exists", () => {
     29|     assert.ok(existsSync(SKILL_PATH), `Missing: ${SKILL_PATH}`);
       |            ^
     30|   });
     31| 

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[1/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md existence and frontmatter > frontmatter has name="cross-artifact-analyze"
AssertionError: Missing: /Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md

- Expected
+ Received

- true
+ false

 ❯ tests/m12-cross-artifact-analyze.test.mjs:34:12
     32|   // --- T011b: frontmatter name + description ---
     33|   test('frontmatter has name="cross-artifact-analyze"', () => {
     34|     assert.ok(existsSync(SKILL_PATH), `Missing: ${SKILL_PATH}`);
       |            ^
     35|     const fm = extractFrontmatter(readFileSync(SKILL_PATH, "utf8"));
     36|     assert.ok(fm, "No valid YAML frontmatter in workflows/cross-artifa…

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[2/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md existence and frontmatter > frontmatter has non-empty description
AssertionError: Missing: /Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md

- Expected
+ Received

- true
+ false

 ❯ tests/m12-cross-artifact-analyze.test.mjs:45:12
     43| 
     44|   test("frontmatter has non-empty description", () => {
     45|     assert.ok(existsSync(SKILL_PATH), `Missing: ${SKILL_PATH}`);
       |            ^
     46|     const fm = extractFrontmatter(readFileSync(SKILL_PATH, "utf8"));
     47|     assert.ok(fm, "No valid YAML frontmatter in workflows/cross-artifa…

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[3/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md covers 4 problem types > body mentions 'inconsistency' (不一致)
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:58:21
     56| describe("cross-artifact-analyze SKILL.md covers 4 problem types", () …
     57|   test("body mentions 'inconsistency' (不一致)", () => {
     58|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
     59|     const hasInconsistency =
     60|       content.includes("inconsistency") || content.includes("不一致");

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[4/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md covers 4 problem types > body mentions 'duplicate' (重复)
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:68:21
     66| 
     67|   test("body mentions 'duplicate' (重复)", () => {
     68|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
     69|     const hasDuplicate =
     70|       content.includes("duplicate") || content.includes("重复");

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[5/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md covers 4 problem types > body mentions 'ambiguity' (歧义)
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:78:21
     76| 
     77|   test("body mentions 'ambiguity' (歧义)", () => {
     78|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
     79|     const hasAmbiguity =
     80|       content.includes("ambiguity") || content.includes("歧义");

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[6/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md covers 4 problem types > body mentions 'underdefined' (欠定义)
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:88:21
     86| 
     87|   test("body mentions 'underdefined' (欠定义)", () => {
     88|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
     89|     const hasUnderdefined =
     90|       content.includes("underdefined") || content.includes("欠定义");

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[7/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md requires 5 finding fields > body mentions 'type' as a required finding field
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:101:21
     99| describe("cross-artifact-analyze SKILL.md requires 5 finding fields", …
    100|   test("body mentions 'type' as a required finding field", () => {
    101|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    102|     assert.ok(
    103|       content.includes("type"),

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[8/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md requires 5 finding fields > body mentions 'source_artifact' as a required finding field
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:109:21
    107| 
    108|   test("body mentions 'source_artifact' as a required finding field", …
    109|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    110|     assert.ok(
    111|       content.includes("source_artifact"),

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[9/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md requires 5 finding fields > body mentions 'target_artifact' as a required finding field
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:117:21
    115| 
    116|   test("body mentions 'target_artifact' as a required finding field", …
    117|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    118|     assert.ok(
    119|       content.includes("target_artifact"),

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[10/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md requires 5 finding fields > body mentions 'fr_or_task_id' as a required finding field
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:125:21
    123| 
    124|   test("body mentions 'fr_or_task_id' as a required finding field", ()…
    125|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    126|     assert.ok(
    127|       content.includes("fr_or_task_id"),

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[11/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md requires 5 finding fields > body mentions 'line_or_anchor' as a required finding field
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:133:21
    131| 
    132|   test("body mentions 'line_or_anchor' as a required finding field", (…
    133|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    134|     assert.ok(
    135|       content.includes("line_or_anchor"),

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[12/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md requires 5 finding fields > body states missing-field finding is invalid/non-compliant
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:142:21
    140|   // T012: missing-field finding = invalid (report non-compliant)
    141|   test("body states missing-field finding is invalid/non-compliant", (…
    142|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    143|     const hasNonCompliant =
    144|       content.includes("无效") ||

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[13/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md non-blocking + read-only semantics > body states report is read-only (只读/read-only)
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:158:21
    156| describe("cross-artifact-analyze SKILL.md non-blocking + read-only sem…
    157|   test("body states report is read-only (只读/read-only)", () => {
    158|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    159|     const hasReadOnly =
    160|       content.includes("只读") ||

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[14/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md non-blocking + read-only semantics > body states report does not block downstream (不阻断/does not block)
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:171:21
    169| 
    170|   test("body states report does not block downstream (不阻断/does not …
    171|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    172|     const hasNonBlocking =
    173|       content.includes("不阻断") ||

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[15/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md non-blocking + read-only semantics > body contains "无一致性问题" (zero-problems summary path)
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:185:21
    183| 
    184|   test('body contains "无一致性问题" (zero-problems summary path)', ()…
    185|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    186|     assert.ok(
    187|       content.includes("无一致性问题"),

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[16/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md artifact location: task-id derivation > body references "specs/{task-id}/" path pattern for artifact location
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:196:21
    194| describe("cross-artifact-analyze SKILL.md artifact location: task-id d…
    195|   test('body references "specs/{task-id}/" path pattern for artifact l…
    196|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    197|     const hasTaskIdPath =
    198|       content.includes("specs/{task-id}") ||

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[17/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md artifact location: task-id derivation > body does NOT contain .specify/ (no .specify/ scaffold dependency)
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:208:21
    206| 
    207|   test("body does NOT contain .specify/ (no .specify/ scaffold depende…
    208|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    209|     // Exclude provenance footnotes from check
    210|     const inputIdx = content.indexOf("## 输入");

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[18/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md artifact location: task-id derivation > body does NOT contain git branch inference commands (git checkout/branch/fetch)
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:223:21
    221| 
    222|   test("body does NOT contain git branch inference commands (git check…
    223|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    224|     const hasBranchInference =
    225|       /git\s+(checkout|branch|fetch|ls-remote)/i.test(content) ||

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[19/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md output path and stage-result reference > body references output path "specs/{task-id}/cross-artifact-analysis.md"
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:237:21
    235| describe("cross-artifact-analyze SKILL.md output path and stage-result…
    236|   test('body references output path "specs/{task-id}/cross-artifact-an…
    237|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    238|     assert.ok(
    239|       content.includes("cross-artifact-analysis.md"),

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[20/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md output path and stage-result reference > body references "facts.analysis_ref" for stage-result integration
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:245:21
    243| 
    244|   test('body references "facts.analysis_ref" for stage-result integrat…
    245|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    246|     assert.ok(
    247|       content.includes("analysis_ref"),

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[21/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md is NOT named speckit-analyze > frontmatter name is NOT "speckit-analyze"
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:256:35
    254| describe("cross-artifact-analyze SKILL.md is NOT named speckit-analyze…
    255|   test('frontmatter name is NOT "speckit-analyze"', () => {
    256|     const fm = extractFrontmatter(readFileSync(SKILL_PATH, "utf8"));
       |                                   ^
    257|     assert.ok(fm, "No valid YAML frontmatter in workflows/cross-artifa…
    258|     assert.notEqual(

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[22/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md is NOT named speckit-analyze > body does NOT use 'speckit-analyze' as a skill identifier in workflow steps
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:266:21
    264| 
    265|   test("body does NOT use 'speckit-analyze' as a skill identifier in w…
    266|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    267|     // Remove provenance footnotes and comments from check
    268|     const lines = content.split("\n").filter(

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[23/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md input contract: 3 artifacts required > body requires spec.md, plan.md, and tasks.md all exist (fail-loud)
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:283:21
    281| describe("cross-artifact-analyze SKILL.md input contract: 3 artifacts …
    282|   test("body requires spec.md, plan.md, and tasks.md all exist (fail-l…
    283|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    284|     const hasSpecMd = content.includes("spec.md");
    285|     const hasPlanMd = content.includes("plan.md");

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[24/25]⎯

 FAIL  tests/m12-cross-artifact-analyze.test.mjs > cross-artifact-analyze SKILL.md input contract: 3 artifacts required > body states fail-loud if any artifact is missing
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/cross-artifact-analyze/SKILL.md'
 ❯ tests/m12-cross-artifact-analyze.test.mjs:294:21
    292| 
    293|   test("body states fail-loud if any artifact is missing", () => {
    294|     const content = readFileSync(SKILL_PATH, "utf8");
       |                     ^
    295|     const hasFailLoud =
    296|       content.includes("fail-loud") ||

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[25/25]⎯

